# tccLibs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AdafruitGFXNativePort/: CMakeLists.txt  README.md  license.txt
AdafruitGFXNativePort/src/mbed/: AdafruitSSD1306I2cMbed.h  AdafruitSSD1306SpiMbed.h
IoAbstraction/: CMakeLists.txt
IoAbstraction/src/pico/: i2cWrapper.cpp
LiquidCrystalIO/: CMakeLists.txt
SimpleCollections/: CMakeLists.txt
TaskManagerIO/: CMakeLists.txt
examples/ControlAppOledEncoderPico/: CMakeLists.txt  ControlAppOledEncoderPico.emf  tcmenu_main.cpp
examples/ControlAppOledEncoderPico/.backup/: ControlAppOledEncoderPico.emf_20231101_08080251.bak  ControlAppOledEncoderPico.emf_20231101_08084686.bak  ControlAppOledEncoderPico.emf_20231101_11163972.bak  ControlAppOledEncoderPico.emf_20231101_18201287.bak  ControlAppOledEncoderPico.emf_20231101_18241546.bak  ControlAppOledEncoderPico.emf_20231101_18265172.bak  ControlAppOledEncoderPico.emf_20231102_09393213.bak  ControlAppOledEncoderPico.emf_20231105_08340950.bak  tcmenu_main.cpp_20231101_08080001.bak  tcmenu_main.cpp_20231101_11163429.bak  tcmenu_main.cpp_20231101_18201165.bak  tcmenu_main.cpp_20231101_18265023.bak  tcmenu_main.cpp_20231102_09393081.bak  tcmenu_main.cpp_20231105_08344140.bak
examples/Using1602I2C/: main.cpp
examples/UsingIoAbstraction/: main.cpp
examples/UsingSSD1306Oled/: main.cpp
experimental/UsbPlayground/: TinyUsbCdcHandler.cpp  TinyUsbCdcHandler.h  deviceDescriptor.c
tcMenu/: CMakeLists.txt
tcUnicodeHelper/: CMakeLists.txt
z_scripts/: copyOverLibs.sh
